CASSANDRASC-145: Move root project into a subproject in gradle
Patch by Francisco Guerrero; Reviewed by TBD for CASSANDRASC-145